--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: GhostyPlugin
-version: '0.7'
+version: '${version}'
 main: GhostyPlugin.MainLoader
-api-version: '1.20'
-description: 'А?'
+api-version: 1.21
+authors: [Ghosty]
+description: Vanilla+.
